# weather_telegram_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
src/application/: main.py  weather_utils.py
tests/: test_weather_utils.py
